--- a/new2.html
+++ b/new2.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ja'Niya's Portfolio</title>
+<title>Ja'Niya's Portfolio</title>
 </head>
 <body>
-<img src="pic1.jpg" >
-<img src="Screen Shot 2017-09-11 at 5.30.02 PM.png" >
-<img src="Screen Shot 2017-09-11 at 5.31.09 PM.png" >
-<img src="Screen Shot 2017-09-11 at 5.32.02 PM.png" >
-<img src="Screen Shot 2017-09-11 at 5.32.35 PM.png" >
-<img src="Screen Shot 2017-09-11 at 5.33.49 PM.png" >
-<img src="Screen Shot 2017-09-11 at 5.34.16 PM.png" >
+<img src="1.jpg" >
+<img src="2.jpg" >
+<img src="3.jpg" >
+<img src="4.jpg" >
+<img src="5.jpg" >
 </body>
 </html>
